--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,8 @@
-cmake_minimum_required (VERSION 2.6)
 project (lhash)
 
 include_directories(${CMAKE_BINARY_DIR}/modules/mbedtls/include)
 file(GLOB lhash_sources ./src/**.c)
-SET(lhash ${lhash_sources})
+set(lhash ${lhash_sources})
 
-ADD_LIBRARY (lhash ${lhash})
-TARGET_LINK_LIBRARIES (lhash mbedtls)
+add_library(lhash ${lhash})
+target_link_libraries(lhash mbedtls)
